# cli-productivity

./: .gitignore  README.md  focus_log.json  main.py  pyproject.toml
FOCUS_MODE/: start.py  stats.py  timer.py
TIMETRACK/: database.py  model.py  timetrap_app.py
TODO/: dashboard.py  database.py  model.py  todo_app.py
src/: README.md
src/data/: problems.json
src/prodcli/: cli.py
src/prodcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prodcli/FOCUS_MODE/: start.py  stats.py
src/prodcli/LEARNING/: learning_app.py  problem_tracker.py
src/prodcli/TIMETRACK/: database.py  timetrap_app.py
src/prodcli/TODO/: dashboard.py  database.py  model.py  todo_app.py
